--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "@auth0/auth0-react": "^1.10.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
